# CourceWork_6

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_list.html
config/: settings.py  urls.py
fixtures/: groups.json  mailings.json  users.json
mailings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: send_mailing.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_email.py  0003_client_owner_alter_mailing_owner_alter_message_owner.py  0004_alter_client_owner_alter_mailing_owner_and_more.py  0005_alter_mailing_clients_alter_mailing_next_date_and_more.py
mailings/templates/: base.html
mailings/templates/mailings/: client_confirm_delete.html  client_detail.html  client_list.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  mailing_log.html  mailing_moder_detail.html  mailing_moder_form.html  mailing_moder_list.html  mailings.html  message_confirm_delete.html  message_detail.html  message_list.html
mailings/templatetags/: my_tags.py
store/: forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_initial.py
store/templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/: create_su.py
users/migrations/: 0001_initial.py  0002_remove_user_pantronymic_alter_user_first_name_and_more.py  0003_alter_user_options.py
(+7 files in other folders)
